--- a/html/index.html
+++ b/html/index.html
@@ -31,11 +31,11 @@
     <div class="wrap">
         <header class="header_wrapper">
             <div class="inner">
-                <h1><a href="/">도영 스트리밍</a></h1>
+                <h1><a href="./index.html">도영 스트리밍</a></h1>
                 <nav>
                     <ul>
                         <li class="active">
-                            <a href="/">메인</a>
+                            <a href="./index.html">메인</a>
                         </li>
                         <li>
                             <a href="./guide.html">가이드</a>
