--- a/html/modal.html
+++ b/html/modal.html
@@ -41,7 +41,7 @@
     <div class="modal_body">
         <div class="btn_box mo">
             <div class="melon">
-                <a href="" class="ico_melon">Andr1</a>
+                <a href="" class="ico_melon">And1</a>
                 <a href="" class="ico_melon">And2</a>
                 <a href="" class="ico_melon">And3</a>
                 <a href="" class="ico_melon">iOS</a>
