--- a/guide.html
+++ b/guide.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 
-    <link type="text/css" href="../css/common.css" rel="stylesheet" />
+    <link type="text/css" href="./css/common.css" rel="stylesheet" />
 
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -95,24 +95,24 @@
                         </ul>
                         <div class="image_box">
                             <div class="">
-                                <img src="../images/guide/streaming/common/playlist.jpeg" alt="스트리밍 플레이리스트">
+                                <img src="./images/guide/streaming/common/playlist.jpeg" alt="스트리밍 플레이리스트">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/common/recommend.jpeg" alt="음원 사이트 추천 가이드">
+                                <img src="./images/guide/streaming/common/recommend.jpeg" alt="음원 사이트 추천 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/common/volume_01.png" alt="음소거 가이드 iOS">
-                                <img src="../images/guide/streaming/common/volume_02.png" alt="음소거 가이드 안드로이드">
+                                <img src="./images/guide/streaming/common/volume_01.png" alt="음소거 가이드 iOS">
+                                <img src="./images/guide/streaming/common/volume_02.png" alt="음소거 가이드 안드로이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/common/same_time.png" alt="동시 스트리밍 가이드">
+                                <img src="./images/guide/streaming/common/same_time.png" alt="동시 스트리밍 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/common/stop_01.jpg" alt="끊김방지 스트리밍 가이드">
-                                <img src="../images/guide/streaming/common/stop_02.jpg" alt="끊김방지 스트리밍 가이드">
+                                <img src="./images/guide/streaming/common/stop_01.jpg" alt="끊김방지 스트리밍 가이드">
+                                <img src="./images/guide/streaming/common/stop_02.jpg" alt="끊김방지 스트리밍 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/common/dual_number.jpeg" alt="듀얼넘버 생성 가이드">
+                                <img src="./images/guide/streaming/common/dual_number.jpeg" alt="듀얼넘버 생성 가이드">
                             </div>
                         </div>
                     </div>
@@ -129,24 +129,24 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/melon/streaming.jpg" alt="스트리밍 가이드 멜론">
+                                <img src="./images/guide/streaming/melon/streaming.jpg" alt="스트리밍 가이드 멜론">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/melon/id_01.jpeg" alt="아이디생성 가이드 멜론">
-                                <img src="../images/guide/streaming/melon/id_02.jpeg" alt="아이디생성 가이드 멜론">
+                                <img src="./images/guide/streaming/melon/id_01.jpeg" alt="아이디생성 가이드 멜론">
+                                <img src="./images/guide/streaming/melon/id_02.jpeg" alt="아이디생성 가이드 멜론">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/melon/down.jpg" alt="음원 다운로드 멜론">
+                                <img src="./images/guide/streaming/melon/down.jpg" alt="음원 다운로드 멜론">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/melon/mv_01.jpg" alt="뮤비 다운로드 멜론">
-                                <img src="../images/guide/streaming/melon/mv_02.jpg" alt="뮤비 다운로드 멜론">
+                                <img src="./images/guide/streaming/melon/mv_01.jpg" alt="뮤비 다운로드 멜론">
+                                <img src="./images/guide/streaming/melon/mv_02.jpg" alt="뮤비 다운로드 멜론">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/melon/gift.jpeg" alt="선물하기 가이드 멜론">
+                                <img src="./images/guide/streaming/melon/gift.jpeg" alt="선물하기 가이드 멜론">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/melon/stop.jpg" alt="끊김방지 가이드 멜론">
+                                <img src="./images/guide/streaming/melon/stop.jpg" alt="끊김방지 가이드 멜론">
                             </div>
                         </div>
                     </div>
@@ -160,14 +160,14 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/genie/streaming.jpg" alt="스트리밍 가이드 지니">
+                                <img src="./images/guide/streaming/genie/streaming.jpg" alt="스트리밍 가이드 지니">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/genie/id_01.jpeg" alt="아이디생성 가이드 지니">
-                                <img src="../images/guide/streaming/genie/id_02.jpeg" alt="아이디생성 가이드 지니">
+                                <img src="./images/guide/streaming/genie/id_01.jpeg" alt="아이디생성 가이드 지니">
+                                <img src="./images/guide/streaming/genie/id_02.jpeg" alt="아이디생성 가이드 지니">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/genie/down.jpg" alt="음원 다운로드 지니">
+                                <img src="./images/guide/streaming/genie/down.jpg" alt="음원 다운로드 지니">
                             </div>
                         </div>
                     </div>
@@ -182,16 +182,16 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/bugs/streaming.jpg" alt="스트리밍 가이드 벅스">
+                                <img src="./images/guide/streaming/bugs/streaming.jpg" alt="스트리밍 가이드 벅스">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/bugs/id.jpeg" alt="아이디생성 가이드 벅스">
+                                <img src="./images/guide/streaming/bugs/id.jpeg" alt="아이디생성 가이드 벅스">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/bugs/down.jpg" alt="음원 다운로드 벅스">
+                                <img src="./images/guide/streaming/bugs/down.jpg" alt="음원 다운로드 벅스">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/bugs/mv.jpg" alt="음원 다운로드 벅스">
+                                <img src="./images/guide/streaming/bugs/mv.jpg" alt="음원 다운로드 벅스">
                             </div>
                         </div>
                     </div>
@@ -204,10 +204,10 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/flo/streaming.jpg" alt="스트리밍 가이드 플로">
+                                <img src="./images/guide/streaming/flo/streaming.jpg" alt="스트리밍 가이드 플로">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/flo/id.jpeg" alt="아이디생성 가이드 플로">
+                                <img src="./images/guide/streaming/flo/id.jpeg" alt="아이디생성 가이드 플로">
                             </div>
                         </div>
                     </div>
@@ -221,13 +221,13 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/vibe/streaming.jpg" alt="스트리밍 가이드 바이브">
+                                <img src="./images/guide/streaming/vibe/streaming.jpg" alt="스트리밍 가이드 바이브">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/vibe/id.jpeg" alt="아이디생성 가이드 바이브">
+                                <img src="./images/guide/streaming/vibe/id.jpeg" alt="아이디생성 가이드 바이브">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/vibe/down.jpg" alt="음원 다운로드 가이드 바이브">
+                                <img src="./images/guide/streaming/vibe/down.jpg" alt="음원 다운로드 가이드 바이브">
                             </div>
                         </div>
                     </div>
@@ -240,11 +240,11 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/streaming/kakao/id_01.jpeg" alt="아이디생성 가이드 카카오뮤직">
-                                <img src="../images/guide/streaming/kakao/id_02.jpeg" alt="아이디생성 가이드 카카오뮤직">
+                                <img src="./images/guide/streaming/kakao/id_01.jpeg" alt="아이디생성 가이드 카카오뮤직">
+                                <img src="./images/guide/streaming/kakao/id_02.jpeg" alt="아이디생성 가이드 카카오뮤직">
                             </div>
                             <div class="">
-                                <img src="../images/guide/streaming/kakao/down.jpg" alt="음원 다운로드 가이드 카카오뮤직">
+                                <img src="./images/guide/streaming/kakao/down.jpg" alt="음원 다운로드 가이드 카카오뮤직">
                             </div>
                         </div>
                     </div>
@@ -257,8 +257,8 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/chart_01.jpeg" alt="음악방송 차트 가이드">
-                                <img src="../images/guide/broadcast/chart_02.jpeg" alt="음악방송 차트 가이드">
+                                <img src="./images/guide/broadcast/chart_01.jpeg" alt="음악방송 차트 가이드">
+                                <img src="./images/guide/broadcast/chart_02.jpeg" alt="음악방송 차트 가이드">
                             </div>
                         </div>
                     </div>
@@ -273,16 +273,16 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/radio_01.jpeg" alt="라디오 가이드">
+                                <img src="./images/guide/broadcast/radio_01.jpeg" alt="라디오 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/broadcast/radio_02.jpeg" alt="라디오 가이드">
+                                <img src="./images/guide/broadcast/radio_02.jpeg" alt="라디오 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/broadcast/radio_03.jpeg" alt="라디오 가이드">
+                                <img src="./images/guide/broadcast/radio_03.jpeg" alt="라디오 가이드">
                             </div>
                             <div class="">
-                                <img src="../images/guide/broadcast/radio_04.jpeg" alt="라디오 가이드">
+                                <img src="./images/guide/broadcast/radio_04.jpeg" alt="라디오 가이드">
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/mv.png" alt="뮤비 스트리밍 가이드">
+                                <img src="./images/guide/broadcast/mv.png" alt="뮤비 스트리밍 가이드">
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/mubeat.jpeg" alt="뮤빗 가이드">
+                                <img src="./images/guide/broadcast/mubeat.jpeg" alt="뮤빗 가이드">
                             </div>
                         </div>
                     </div>
@@ -315,7 +315,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/allchart.jpeg" alt="올차트 가이드">
+                                <img src="./images/guide/broadcast/allchart.jpeg" alt="올차트 가이드">
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/idolchamp.jpeg" alt="아이돌챔프 가이드">
+                                <img src="./images/guide/broadcast/idolchamp.jpeg" alt="아이돌챔프 가이드">
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/linc.jpeg" alt="링크 가이드">
+                                <img src="./images/guide/broadcast/linc.jpeg" alt="링크 가이드">
                             </div>
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/higher.jpeg" alt="하이어 가이드">
+                                <img src="./images/guide/broadcast/higher.jpeg" alt="하이어 가이드">
                             </div>
                         </div>
                     </div>
@@ -359,7 +359,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="show">
-                                <img src="../images/guide/broadcast/v.jpeg" alt="v 컬러링 가이드">
+                                <img src="./images/guide/broadcast/v.jpeg" alt="v 컬러링 가이드">
                             </div>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                         </ul>
                         <div class="image_box">
                             <div class="">
-                                <img src="../images/guide/broadcast/cheering.jpg" alt="응원법 가이드">
+                                <img src="./images/guide/broadcast/cheering.jpg" alt="응원법 가이드">
                             </div>
                         </div>
                     </div>
