--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="NCT도영 스트리밍 website">
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
 
     <link type="text/css" href="./css/common.css" rel="stylesheet" />
 
@@ -54,13 +54,13 @@
                                     <li class="swiper-slide">
                                         <a href="https://x.com/DOYOUNG_STREAM/status/1924392620157284691"
                                             target="_blank">
-                                            <img src="../images/common/main_banner_01.jpg">
+                                            <img src="./images/common/main_banner_01.jpg">
                                         </a>
                                     </li>
                                     <li class="swiper-slide">
                                         <a href="https://x.com/DOYOUNG_STREAM/status/1924449974349430823"
                                             target="_blank">
-                                            <img src="../images/common/main_banner_02.jpg">
+                                            <img src="./images/common/main_banner_02.jpg">
                                         </a>
                                     </li>
                                 </ul>
@@ -110,7 +110,7 @@
                         <div class="playlist">
                             <div class="album">
                                 <div class="skip_back"></div>
-                                <div class="cover" style="background-image: url(../images/common/img_cover.jpg);">
+                                <div class="cover" style="background-image: url(./images/common/img_cover.jpg);">
                                 </div>
                                 <div class="skip_forward"></div>
                             </div>
@@ -237,7 +237,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <script src="../js/chart_apex.js"></script>
+                            <script src="./js/chart_apex.js"></script>
                         </div>
                     </div>
                     <div class="box week_vote">
@@ -270,7 +270,7 @@
                         <div class="vote_none">
                             <p>🗳️진행중인 투표가 없습니다❌</p>
                         </div>
-                        <script src="../js/melon_award.js"></script>
+                        <script src="./js/melon_award.js"></script>
                     </div>
             </section>
         </div>
