--- a/guide.html
+++ b/guide.html
@@ -30,14 +30,14 @@
     <div class="wrap">
         <header class="header_wrapper">
             <div class="inner">
-                <h1><a href="./index.html">도영 스트리밍</a></h1>
+                <h1><a href="./index">도영 스트리밍</a></h1>
                 <nav>
                     <ul>
                         <li class="">
-                            <a href="./index.html">메인</a>
+                            <a href="./index">메인</a>
                         </li>
                         <li class="active">
-                            <a href="./guide.html">가이드</a>
+                            <a href="./guide">가이드</a>
                         </li>
                     </ul>
                     <button type="button" class="top_btn oneclick_btn">원클릭 스트리밍</button>
