--- a/index.html
+++ b/index.html
@@ -287,13 +287,17 @@
     <!-- playlist modal-->
     <div class="modal" id="playlistContainer">
     </div>
-    
+
     <!-- oneclick PC modal-->
     <div class="modal" id="oneclickPCContainer">
     </div>
-    
+
     <!-- oneclick MO modal-->
     <div class="modal" id="oneclickMOContainer">
+    </div>
+
+    <!-- oneclick radio modal-->
+    <div class="modal" id="oneclickRadioContainer">
     </div>
 
     <!-- swiper -->
@@ -302,8 +306,8 @@
             slidesPerView: 1,
             loop: true,
             autoplay: {
-              delay: 5000,
-              disableOnInteraction: false,
+                delay: 5000,
+                disableOnInteraction: false,
             },
             pagination: {
                 el: ".pagination",
@@ -318,8 +322,8 @@
             slidesPerView: 1,
             loop: true,
             autoplay: {
-              delay: 5000,
-              disableOnInteraction: false,
+                delay: 5000,
+                disableOnInteraction: false,
             },
             pagination: {
                 el: ".pagination",
