--- a/modal.html
+++ b/modal.html
@@ -63,3 +63,18 @@
         </div>
     </div>
 </div>
+
+<!-- oneclick radio modal-->
+<div class="modal_contents type_click" id="oneclickRadioModal">
+    <div class="modal_head">
+        <p class="modal_tit">원클릭 라디오<span class="pc_txt">모바일 버전으로 접속해주세요.</span></p>
+        <button type="button" class="modal_close_btn">모달 닫기</button>
+    </div>
+    <div class="modal_body">
+        <div class="btn_box radio">
+            <a class="radio_btn sbs" target="_blank" rel="noreferrer" href="sms:%231077?body=도영의 안녕,우주 신청합니다.">SBS</a>
+            <a class="radio_btn kbs" target="_blank" rel="noreferrer" href="sms:%238910?body=도영의 안녕,우주 신청합니다.">KBS</a>
+            <a class="radio_btn mbc" target="_blank" rel="noreferrer" href="sms:%238000?body=도영의 안녕,우주 신청합니다.">MBC</a>
+        </div>
+    </div>
+</div>
