--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="btn_box">
                             <button type="button" class="main_btn ico_click">원클릭 스트리밍</button>
                             <button type="button" class="main_btn ico_radio">원클릭 라디오</button>
-                            <a class="main_btn ico_coin" href="https://www.melon.com/buy/meloncash/charge.htm"
+                            <a class="main_btn ico_coin" href=""
                                 target="_blank">멜론 충전하기</a>
                             <a class="main_btn ico_gift"
                                 href="https://www.melon.com/mymusic/messagepresent/mymusicpresent_insert.htm"
